--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -93,17 +93,8 @@ spring:
             scope: openid,roles
         provider:
           keycloak:
-            issuer-uri: http://ab1499ce512714319a3df12ec8b08c1c-941973363.ap-northeast-2.elb.amazonaws.com/realms/PolarBookshop
+            issuer-uri: http://adb036ff5c06344c0aec6be4b15350c8-386055155.ap-southeast-2.elb.amazonaws.com/realms/PolarBookshop
 #            issuer-uri: http://polar-keycloak:80/realms/PolarBookshop
-#  # Zipkin 설정 추가
-#  sleuth:
-#    sampler:
-#      probability: 1.0 # 모든 요청을 샘플링 (프로덕션 환경에서는 낮출 수 있음)
-#  zipkin:
-#    base-url: http://zipkin-service:80 # Zipkin 서버 URL
-#    sender:
-#      type: web # HTTP 방식으로 Zipkin에 전송
-
 
 resilience4j:
   circuitbreaker:
@@ -117,5 +108,3 @@ resilience4j:
     configs:
       default:
         timeoutDuration: 5s
-
-
