--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,22 +23,23 @@ spring:
         initial-interval: 1000 # 1s
         max-interval: 2000 # 2s
         multiplier: 1.1
-    default-filters:
-      - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials
-    globalcors:
-      cors-configurations:
-        '[/**]':
-          allowedOrigins:
-            - '*' # 허용하려는 도메인
-          allow-credentials: true # 요청 시 인증 정보를 전송하도록 허가
-          allowedHeaders: '*' # 허용하려는 헤더
-          allowedMethods: # 허용하려는 HTTP 메서드
-            - PUT
-            - GET
-            - POST
-            - DELETE
-            - OPTIONS
     gateway:
+      globalcors:
+        cors-configurations:
+          '[/**]':
+            allowedOrigins:
+              - '*' # 허용하려는 도메인
+            allow-credentials: true # 요청 시 인증 정보를 전송하도록 허가
+            allowedHeaders:
+              - Authorization
+              - Authorization-refresh # 허용하려는 헤더
+            allowedMethods: # 허용하려는 HTTP 메서드
+              - PUT
+              - GET
+              - POST
+              - DELETE
+              - OPTIONS
+              - PATCH
       httpclient:
         connect-timeout: 2000 # 2s
         response-timeout: 5s
