--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -42,7 +42,7 @@ spec:
             - name: SPRING_REDIS_HOST
               value: polar-redis
             - name: SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUER_URI
-              value: http://ab1499ce512714319a3df12ec8b08c1c-941973363.ap-northeast-2.elb.amazonaws.com/realms/PolarBookshop
+              value: http://a1ac45fb8469c4e908fa127aa8d0aeee-1889420468.ap-northeast-2.elb.amazonaws.com /realms/PolarBookshop
 
             # - name: SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_KEYCLOAK_ISSUER_URI
             #   value: http://polar-keycloak/realms/PolarBookshop
