--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -93,7 +93,7 @@ spring:
             scope: openid,roles
         provider:
           keycloak:
-            issuer-uri: http://abd51a0238f99428382c93555ca43fc5-1208788426.ap-southeast-2.elb.amazonaws.com/realms/PolarBookshop
+            issuer-uri: http://a1ac45fb8469c4e908fa127aa8d0aeee-1889420468.ap-northeast-2.elb.amazonaws.com/realms/PolarBookshop
 #            issuer-uri: http://polar-keycloak:80/realms/PolarBookshop
 
 resilience4j:
